--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
 
 <md-toolbar class="md-theme-light md-default-theme">
     <h1 class="md-toolbar-tools header">
-        <span ui-sref="home">WEB EXTRACT</span> | <span class="small">@sp33c</span>
+        <span style="font-size: 120%; cursor: pointer;" ui-sref="home">WEB EXTRACT</span> | <span class="small">@sp33c</span>
     </h1>
 </md-toolbar>
 
