websocket as STOMP

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
 
     <!-- ui -router -->
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    
+    <script src="vendors/stomp.js"></script>
 
     <!-- ng-cloak -->
     <style>
